# math-foundations-of-ml

./: README.md  pyproject.toml
homeworks/work 1/notebooks/: ДЗ №1. Softmax регрессия.ipynb
homeworks/work 2/notebooks/: ДЗ №2. Multi-class SVM.ipynb
homeworks/work 3/data/final/: submission_1.csv  submission_2.csv  submission_3.csv
homeworks/work 3/notebooks/: ДЗ №3. Ансамбли.ipynb
homeworks/work 3/reports/: eda_report.html  feature_engineering_report.html
practical/work 1/: Линейная регрессия.ipynb
practical/work 2/: Сходимость алгоритмов оптимизации.ipynb
